<resources>
    <string name="app_name">My Forum</string>

    <!-- Main Activity -->
    <string name="loginTitleTextView">Login</string>
    <string name="emailTextField">Email</string>
    <string name="passwordTextField">Password</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>

    <!-- For PostActivity -->
    <string name="empty_posts">No discussion to show</string>
    <string name="empty_posts_advice">Press \"Refresh\" button on menu to load all posts</string>
    <string name="newPostFloatingActionButton">New post</string>

    <!-- For ItemPost -->
    <string name="tagsItemTextView">"Tags: "</string>
    <string name="userItemTextView">Created by: </string>
    <string name="reactionsItemTextView">Reactions: </string>
    <string name="dateItemTextView">Created at: </string>

    <!-- For Activity_User_Register -->
    <string name="emailTF">Email</string>
    <string name="nameTF">Name</string>
    <string name="lastnameTF">Lastname</string>
    <string name="pass1TF">Enter password</string>
    <string name="pass2TF">Confirm password</string>
    <string name="createUserButton">Register</string>
    <string name="clearButton">Clear all</string>

    <!-- For New_Post_Alert_Dialog -->
    <string name="titleTextField">Title</string>
    <string name="bodyTextField">Body</string>
    <string name="tagsEditText">Tags</string>

    <!-- For Main_Menu -->
    <string name="opt1">User: %s</string>
    <string name="opt2">Refresh</string>
    <string name="opt3">Logout</string>
    <string name="opt4">About</string>

    <!-- For Toast Messages -->
    <string name="newPostTM">New post added!</string>
    <string name="noNewPostTM">No new post was added!</string>
    <string name="likePostTM">Like</string>
    <string name="unlikePostTM">Unlike</string>
    <string name="editPostTM">Edit Post from position </string>
    <string name="successPostTM">Successful post edited!</string>
    <string name="unsuccessPostTM">Unsuccessful post edited!</string>
    <string name="errorPostTM">Post Error. This post doesn\'t exist!"</string>
    <string name="erasedPostTM">The post has been erased!"</string>
    <string name="updatingPostTM">Updating Database…"</string>
    <string name="updatingRecyclerViewTM">Updating List of Post…</string>
    <string name="logoutPostTM">You have logged out"</string>
    <string name="toastAbout">Created by JosueRuiz </string>
    <string name="loginTM">Wrong data!</string>

    <!-- For AlertDialog -->
    <string name="exitTitleAD">Logout</string>
    <string name="exitMsgAD">You are about to log out, are you sure?</string>
    <string name="positiveButtonAD">Yes</string>
    <string name="negativeButtonAD">No</string>
    <string name="editButtonAD">Edit</string>
    <string name="cancelButtonAD">Cancel</string>
    <string name="deleteButtonAD">Delete</string>
    <string name="addButtonAD">Add</string>
    <string name="editTitleAD">Edit Post</string>
    <string name="addNewPostTitleAD">Add new Post</string>

    <!-- For PostAdapter -->
    <string name="tagsTV">Tags: %s</string>
    <string name="userTV">Created By: %s</string>
    <string name="reactionTV">Reactions: %d</string>
    <string name="dateTV">Created at: %s</string>
</resources>