<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    android:layout_margin="10dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/userItemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="5dp"
        android:textColor="@color/lowWeight"
        android:text="@string/userItemTextView"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">

            <TextView
                android:id="@+id/titleItemTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Title"
                style="@style/Titles"/>

            <TextView
                android:id="@+id/bodyItemTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Content"
                android:background="@drawable/text_lines"
                style="@style/Body"/>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tagsItemTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/tagsItemTextView"
                    android:textColor="@color/lowWeight"/>

            </FrameLayout>

            <TextView
                android:id="@+id/dateItemTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@color/white"
                android:text="@string/dateItemTextView"
                android:textColor="@color/lowWeight"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/reactFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/red"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:elevation="6dp"
                android:layout_margin="5dp"
                android:layout_gravity="end|bottom"
                android:src="@drawable/heart_unselected"
                tools:ignore="ContentDescription" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>